--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,8 @@ version: "3"
 services:
     app:
         build: .
-        container_name: auth-example
+        container_name: auth-example_app
+        image: dewaadiperdana/auth-example:1.0.0
         restart: always
         depends_on:
             - redis
@@ -13,6 +14,6 @@ services:
     redis:
         image: redis:latest
         restart: always
-        container_name: redis-auth
+        container_name: auth-example_redis
         ports:
             - 6380:6379
